Bug 459516 - Direct applications match not always prioritized correctly in krunner
Summary: Direct applications match not always prioritized correctly in krunner
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-09-22 08:09 UTC by Eric Armbruster
Modified: 2022-11-01 13:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.3
Sentry Crash Report:


Attachments
krunner_wrong_prio (494.50 KB, image/png)
2022-09-22 08:56 UTC, Eric Armbruster
Details
app_launcher_correct_prio (183.41 KB, image/png)
2022-09-22 08:57 UTC, Eric Armbruster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Armbruster 2022-09-22 08:09:31 UTC
STEPS TO REPRODUCE
1. Type dolphin or konsole into krunner or into the overview effect 

OBSERVED RESULT
The application dolphin/konsole is not the first match instead some recent files stuff is the top entry

EXPECTED RESULT
Applications should be the top result. Please note that dolphin/konsole application is the top entry if I use the application menu (kicker/kickoff I believe its called)


SOFTWARE/OS VERSIONS
latest git master as of 9/22/22

ADDITIONAL INFORMATION
Comment 1 Alexander Lohnau 2022-09-22 08:29:36 UTC
Please attach a screenshot of the issue.
Comment 2 Eric Armbruster 2022-09-22 08:56:06 UTC
Created attachment 152327 [details]
krunner_wrong_prio
Comment 3 Eric Armbruster 2022-09-22 08:57:59 UTC
Created attachment 152329 [details]
app_launcher_correct_prio
Comment 4 Alexander Lohnau 2022-09-22 09:15:44 UTC
I see - this is indeed problematic.
Comment 5 Nate Graham 2022-09-22 20:26:48 UTC
With current git master, I can also reproduce with konsole, but not Dolphin.
Comment 6 Natalie Clarius 2022-10-04 18:43:40 UTC
Forgot to add the bug keyword - I started a merge request: https://invent.kde.org/plasma/systemsettings/-/merge_requests/165
Comment 8 Natalie Clarius 2022-10-05 18:26:43 UTC
Got the wrong link, it should be https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2177
Comment 9 Nate Graham 2022-10-31 16:16:48 UTC
Git commit 50abffbe5dd1c28a8f999f65f74345f5a8292178 by Nate Graham, on behalf of Natalie Clarius.
Committed on 31/10/2022 at 15:51.
Pushed by ngraham into branch 'master'.

runners/servicerunner: increase match type when query exactly matches service name

M  +1    -0    runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/50abffbe5dd1c28a8f999f65f74345f5a8292178
Comment 10 Nate Graham 2022-10-31 16:27:14 UTC
Git commit d1592ff678e60f7d7a075d3531b53b06401a33a9 by Nate Graham, on behalf of Natalie Clarius.
Committed on 31/10/2022 at 16:22.
Pushed by ngraham into branch 'Plasma/5.26'.

runners/servicerunner: increase match type when query exactly matches service name
(cherry picked from commit 50abffbe5dd1c28a8f999f65f74345f5a8292178)

M  +3    -0    runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d1592ff678e60f7d7a075d3531b53b06401a33a9