runners/servicerunner: increase match type when query exactly matches service name

BUG: 459516